[gd_scene load_steps=5 format=3 uid="uid://1miw7wphmqru"]

[ext_resource type="Script" path="res://Scripts/bobby.gd" id="1_8wfov"]
[ext_resource type="Texture2D" uid="uid://b0iwtve0l5owt" path="res://Assets/Images/stickmanSprite.png" id="1_bwble"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7q5c"]
size = Vector2(42, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_o04it"]
radius = 39.0

[node name="Bobby" type="CharacterBody2D"]
script = ExtResource("1_8wfov")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.999985, 0.999985)
scale = Vector2(0.119444, 0.135884)
texture = ExtResource("1_bwble")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_v7q5c")

[node name="Interaction Components" type="Node2D" parent="."]
z_index = 1

[node name="InteractionArea" type="Area2D" parent="Interaction Components"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction Components/InteractionArea"]
shape = SubResource("CircleShape2D_o04it")

[node name="InteractLabel" type="Label" parent="Interaction Components"]
offset_left = -32.5
offset_top = -63.0
offset_right = 32.5
offset_bottom = -40.0
theme_override_font_sizes/font_size = 9
text = "test text"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="area_entered" from="Interaction Components/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="Interaction Components/InteractionArea" to="." method="_on_interaction_area_area_exited"]
